// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditLocationUnit renders correctly when location is jurisdiction: form rendered 1`] = `"InstanceIdusernameParentNameStatusActiveInactiveLocation categoryService pointJurisdictionTypeSelect the service point typeExternal IDGeometryLatitudeLongitudeUnit group23 SaveCancel"`;

exports[`EditLocationUnit renders correctly: alias value 1`] = `
Array [
  <input
    class="ant-input"
    id="location-form_alias"
    placeholder="Alias"
    type="text"
    value="creepTown"
  />,
]
`;

exports[`EditLocationUnit renders correctly: name value 1`] = `
Array [
  <input
    class="ant-input"
    id="location-form_name"
    placeholder="Enter a location name"
    type="text"
    value="area51"
  />,
]
`;
